site/assets/css/flexi_shared.css
/* ... */
@media only screen and (min-width: 1600px) and (max-width: 1680px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 88.7% !important;
	}
}
@media only screen and (min-width: 1490px) and (max-width: 1600px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 87.7% !important;
	}
}
@media only screen and (min-width: 1390px) and (max-width: 1490px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 87% !important;
	}
}
@media only screen and (min-width: 1290px) and (max-width: 1390px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 86% !important;
	}
}
@media only screen and (min-width: 1190px) and (max-width: 1290px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 84.5% !important;
	}
}
@media only screen and (min-width: 1120px) and (max-width: 1190px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 84% !important;
	}
}
@media only screen and (min-width: 800px) and (max-width: 1120px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 83% !important;
	}
}
@media only screen and (max-width: 800px) {
	.full_body_box .container_fcfield.fcfield_row0,
	.full_body_box .container_fcfield.fcfield_row1 {
		width: 100% !important;
	}
}
.container_fcfield.fcdualline {
	width: auto !important;
}
.fcclear,
#flexicontent .clear {
	border: 0 !important;
	clear: both !important;
	float: none !important;
	font-size: 1px !important;
	height: 0 !important;
	line-height: 1px !important;
	margin: 0 !important;
	padding: 0 !important;
	visibility: hidden !important;
	display: block !important;
}
#flexicontent form .fcfield_textareaval,
#flexicontent form .fcfield_selectval,
#flexicontent form .fcfield_selectmulval,
#flexicontent form .fcfield_textval {
	background-clip: padding-box;
	color: #444;
	border: 1px solid #AAAAAA;
	border-radius: 4px;
	display: inline-block;
	padding: 0 6px 0px 6px;
	margin: 0px 6px 2px 2px;
	position: relative;
	text-decoration: none;
	font-size: 12px;
}
#flexicontent form span.fcfield_textval {
	cursor: text;
	padding: 4px;
	white-space: pre-wrap;
	word-wrap: break-word;
	min-width: 220px;
	width: 50%;
	max-width: 600px;
}
#flexicontent form select.fcfield_selectval,
#flexicontent form input.fcfield_textval {
	height: 26px;
	line-height: 26px;
	overflow: auto;
	vertical-align: top;
	min-width: 220px;
	width: 50%;
	max-width: 600px;
}
#flexicontent form select.fcfield_selectval {
	padding: 4px 0 2px 4px;
}
#flexicontent form select.fcfield_selectmulval,
#flexicontent form textarea.fcfield_textareaval {
	line-height: 1em;
	overflow: auto;
	padding: 4px 0 2px 4px;
}
#flexicontent form select.fcfield_selectval.inlineval,
#flexicontent form select.fcfield_selectmulval.inlineval,
#flexicontent form input.fcfield_textval.inlineval {
	min-width: 0;
	width: auto;
}
#flexicontent form .admintable input.fcfield_textval {
	height: 22px;
	line-height: 100%;
	margin-top: 0px;
	margin-bottom: 0px;
}
table.fc-form-tbl.keytop td.key {
	vertical-align: top;
}
table.fc-form-tbl td {
	vertical-align: middle;
	padding: 4px 24px 4px 0px;
}
table.fc-form-tbl td.key {
	vertical-align: top;
	text-align: right;
	padding: 4px 0px;
	max-width: 140px;
	min-width: 114px;
}
table.fc-form-tbl.fcfullwidth {
	width: 100% !important;
}
table.fc-form-tbl.fcfullwidth td.key {
	width: 114px;
	padding-right: 8px;
}
table.fc-form-tbl.fcfullwidth td.key .label {
	white-space: unset;
}
table.fc-form-tbl td.key label.label {
	display: inline-block;
	padding: 8px 4%;
	width: 82%;
	margin: 0px 5%;
	white-space: normal;
}
table.fc-form-tbl.fcinner td.key label.label {
	padding: 2px 4px;
}
table.fc-form-tbl fieldset {
	margin: 0px;
	padding: 0px;
	border-width: 0px;
}
table.fc-form-tbl td.data {
	vertical-align: top;
}
table.fc-form-tbl td.key > .fc-prop-lbl {
	margin: 0 8px 0;
}
#fileman_tabset {
	margin-bottom: 32px;
}
#fileman_tabset div.tabbertab {
	padding: 8px 16px 16px 16px;
}
#fileman_tabset .fc-about-box {
	padding: 0 8px;
	margin: 2px 0;
	text-align: left;
	float: left;
	width: 100%;
	box-sizing: border-box;
	display: block;
	font-size: 14px;
}
.fc-sys-upload-limit-box img,
.fc-php-upload-limit-box img {
	vertical-align: top;
	float: none;
	border: none;
	margin: 0;
}
.fc-fileman-upload-icon:before {
	color: darkorange !important;
}
.fc-fileman-thumb-box {
	display: inline-block;
	vertical-align: top;
	position: relative;
	width: 150px;
	height: 150px;
	border-radius: 4px;
	border: 3px solid #ddd;
	margin: 4px;
	padding: 4px;
}
.fc-fileman-thumb-box.selected {
	border: 3px solid green;
}
label.fc-fileman-checkbox-lbl {
	position: absolute !important;
	top: -9px !important;
	right: -14px !important;
	margin: 0 !important;
}
img.fc-fileman-thumb {
	width: 150px;
	height: 150px;
}
.adminlist.fcmanlist img.fc-fileman-thumb {
	width: 60px;
	height: 60px;
}
#multiple_uploader {
	padding: 0px;
	margin: 6px 0 0 0;
	width: auto;
}
#multiple_uploader.fc_file_uploading {
	width: auto;
	overflow: visible;
}
#multiple_uploader.fc_file_uploading .fileprops_message.fc_ajax_message_box {
	position: absolute;
	display: inline-block;
	z-index: 1;
	margin: 0;
	padding: 0;
}
#multiple_uploader.fc_file_uploading .fc_ajax_message_box .alert-heading {
	display: none;
}
#multiple_uploader.fc_file_uploading .fileprops_message .fc-mssg,
#multiple_uploader.fc_file_uploading .fileprops_message .alert {
	position: absolute;
	display: inline-block;
	z-index: 1;
	margin: 0;
	padding-top: 6px;
	padding-bottom: 4px;
	box-sizing: border-box;
	min-height: 32px;
}
#multiple_uploader.fc_file_uploading > .plupload_scroll.plupload_wrapper {
	float: left;
	clear: both;
}
/* ... */

